better colour scheme

--- a/pokerstyle.css
+++ b/pokerstyle.css
@@ -1,10 +1,10 @@
 body {
-    background-color: lightblue;
+    background-color: rgb(179, 201, 58);
     text-align: center;
 }
 
 h1 {
-    color: white;
+    color: rgb(212, 136, 48);
     text-align: center;
 }
 
