--- a/pokerstyle.css
+++ b/pokerstyle.css
@@ -1,6 +1,7 @@
 body {
     background-color: lightblue;
     text-align: center;
+    font-family: 'Calibri';
 }
 
 h1 {
@@ -15,4 +16,16 @@ audio {
 p {
     font-family: verdana;
     font-size: 20px;
+}
+
+div.form {
+    display: block;
+    text-align: center;
+}
+
+form {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
 }
