--- a/pokerapp/templates/assess.html
+++ b/pokerapp/templates/assess.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--<link rel="stylesheet" href="../pokerstyle.css">-->
-<!-- This is all placeholder code, code taken from many different sites to understand its functions. NOT FINAL-->
 
 <head>
     <title>Intuitive Poker</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/custom.css">
-    <link rel="stylesheet" type="text/css" href="css/login.css">
+    <link rel="stylesheet" type="text/css" href="C:\Users\jakel\OneDrive\Documents\GitHub\pokertutorial\pokerapp\templates\css\custom.css">
 </head>
+<title>
+    Intuitive Poker
+</title>
 
 <body>
+    </div>
 
     <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
         <a class="navbar-brand" href="splash.html">
@@ -38,37 +39,19 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="stats.html" tabindex="-1">Stats</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Lessons/lessonshome.html" tabindex="-1">Lessons</a>
+                        </li>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Lessons/lessonshome.html" tabindex="-1">Lessons</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
-    <div class="container">
-        <h2>Log In</h2>
-        <form action="">
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter E-mail" name="email">
-            </div>
-            <div class="form-group">
-                <label for="pwd">Password:</label>
-                <input type="password" class="form-control" id="pwd" placeholder="Enter Password" name="pwd">
-            </div>
-            <div class="checkbox">
-                <label><input type="checkbox" name="remember"> Remember me</label>
-            </div>
-            <button type="submit" class="btn btn-default" id="submit">Submit</button>
-        </form>
-    </div>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script defer src="/js/login-page.js"></script>
+    <div <!-- Scripts at the bottom allow for faster page loading, put any body stuff above these scripts-->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
