--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -1,14 +1,49 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    {% if title %}
-    <title>{{ title }} - FLASKTUT</title>
-    {% else %}
-    <title>Welcome to FLASKTUT</title>
-    {% endif %}
+    <title>Intuitive Poker</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/custom.css') }}">
 </head>
 
 <body>
+    </div>
+    <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
+        <a class="navbar-brand" href="splash.html">
+            <img src="{{url_for('static', filename='pic.jpg')}}" width="30" height="30" alt="logo"> Intuitive Poker
+        </a>
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="assessments.html" tabindex="-1">Assessments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="feedback.html" tabindex="-1">Feedback</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="stats.html" tabindex="-1">Stats</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Lessons/lessonshome.html" tabindex="-1">Lessons</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!--
     <div>FLASKTUT:
         <a href="{{ url_for('index') }}">Home</a>
         <a href="{{ url_for('login') }}">Login</a>
@@ -19,7 +54,11 @@
         <li>{{ message }}</li>
         {% endfor %}
     </ul>
-    {% endif %} {% endwith %} {% block content %} {% endblock %}
+    {% endif %} {% endwith %} {% block content %} {% endblock %}-->
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
