--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -24,9 +24,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
+                    {% if current_user.is_anonymous %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                     </li>
+                    {% else %}
+                    <li>
+                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                    </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="assessments.html" tabindex="-1">Assessments</a>
                     </li>
