--- a/pokerapp/static/styles/register.css
+++ b/pokerapp/static/styles/register.css
@@ -1,5 +1,7 @@
 /* div.form and form used to center current login page forms, may be removed if login page functionality changes */
 
+
+/*
 div.form {
     display: block;
     text-align: center;
@@ -19,17 +21,11 @@ form {
     text-align: left;
     color: rgba(255, 255, 255, .5);
 }
+*/
 
 div.container {
     width: 350px;
     height: 350px;
-    border-color: rgb(153, 27, 27);
-    background-color: rgb(153, 27, 27);
-}
-
-div.reg {
-    width: 350px;
-    height: 350px;
-    border-color: rgb(153, 27, 27);
+    border-color: rgb(73, 18, 18);
     background-color: rgb(153, 27, 27);
 }
