--- a/pokerapp/templates/login.html
+++ b/pokerapp/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% block content %} {% block style %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> {% endblock %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> {% endblock %} {% block title %}Login{% endblock %}
 
 <body>
     <div class="container">
