--- a/pokerapp/templates/register.html
+++ b/pokerapp/templates/register.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %} {% block content %} {% block style %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> {% endblock %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> {% endblock %} {% block title %}Register{% endblock %}
 
 <body>
-    <div class="container" style="height: 525px;">
+    <div class="container" style="height: 505px;">
         <h2>Register</h2>
         <form action="" method="post">
             {{ form.hidden_tag() }}
