--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -32,10 +32,10 @@
                     <li>
                         <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                     </li>
-                    {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="assessments.html" tabindex="-1">Assessments</a>
+                        <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
                     </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="feedback.html" tabindex="-1">Feedback</a>
                     </li>
