--- a/pokerapp/templates/login.html
+++ b/pokerapp/templates/login.html
@@ -1,24 +1,20 @@
-{% extends "base.html" %} {% block content %} {% block style %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> {% endblock %} {% block title %}Login{% endblock %}
-
-<body>
-    <div class="container">
-        <h2>Sign In</h2>
-        <form action="" method="post" novalidate>
-            {{ form.hidden_tag() }}
-            <p>
-                {{ form.username.label }}<br> {{ form.username(size=20) }}<br> {% for error in form.username.errors %}
-                <span style="color: red;">[{{ error }}]</span> {% endfor %}
-            </p>
-            <p>
-                {{ form.password.label }}<br> {{ form.password(size=20) }}<br> {% for error in form.password.errors %}
-                <span style="color: red;">[{{ error }}]</span> {% endfor %}
-            </p>
-            <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-            <p>{{ form.submit() }}</p>
-        </form>
-    </div>
-    <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
-
-</body>
+{% extends "base.html" %} {% block style %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> {% endblock %} {% block title %}Login{% endblock %} {% block content %}
+<div class="container">
+    <h2>Sign In</h2>
+    <form action="#" method="post" novalidate>
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.username.label }}<br> {{ form.username(size=20) }}<br> {% for error in form.username.errors %}
+            <span style="color: red;">[{{ error }}]</span> {% endfor %}
+        </p>
+        <p>
+            {{ form.password.label }}<br> {{ form.password(size=20) }}<br> {% for error in form.password.errors %}
+            <span style="color: red;">[{{ error }}]</span> {% endfor %}
+        </p>
+        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+        <p>{{ form.submit() }}</p>
+    </form>
+</div>
+<p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
 {% endblock %}
