--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -36,7 +36,7 @@
                     </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="feedback.html" tabindex="-1">Feedback</a>
+                        <a class="nav-link" href="{{ url_for('quiz') }}" tabindex="-1">Quiz</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="stats.html" tabindex="-1">Stats</a>
