--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -36,13 +36,13 @@
                     </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="feedback.html" tabindex="-1">Feedback</a>
+                        <a class="nav-link" href="{{url_for('assess')}}" tabindex="-1">Assessments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="stats.html" tabindex="-1">Stats</a>
+                        <a class="nav-link" href="{{ url_for('stats')}}" tabindex="-1">Stats</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Lessons/lessonshome.html" tabindex="-1">Lessons</a>
+                        <a class="nav-link" href="{{ url_for('lessonshome')}}" tabindex="-1">Lessons</a>
                     </li>
                 </ul>
             </div>
