--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="{{ url_for('stats')}}" tabindex="-1">Stats</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('lessonshome')}}" tabindex="-1">Lessons</a>
+                        <a class="nav-link" href="{{ url_for('lessons')}}" tabindex="-1">Lessons</a>
                     </li>
                 </ul>
             </div>
