--- a/pokerapp/templates/index.html
+++ b/pokerapp/templates/index.html
@@ -1,3 +1,21 @@
 {% extends "base.html" %} {%block content %}
+
+<p> TESTA</p>
+
+<div class="container">
+    <div class="row">
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+    </div>
+  </div>
+
+
 <h1>Hello, {{ current_user.username }}!</h1>
 {% endblock %}
