--- a/pokerapp/templates/Lesson1.html
+++ b/pokerapp/templates/Lesson1.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/quiz.css') }}"> {% endblock %} {% block title %}Quiz{% endblock %} {% block content %}
 
 <div class="content">
-    <h1>PASSWROD ACCEPTED</h1>
+    <h1>PASSWORD ACCEPTED</h1>
 
 </div>
 {% endblock %}
