--- a/pokerapp/templates/user.html
+++ b/pokerapp/templates/user.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% block content %}
+{%block title%} Profile {%endblock%}
 <h1>User: {{ user.username }}</h1>
 <hr> {% for post in posts %}
 <p>
