--- a/pokerapp/templates/register.html
+++ b/pokerapp/templates/register.html
@@ -4,7 +4,7 @@
 <body>
     <div class="container" style="height: 505px;">
         <h2>Register</h2>
-        <form action="" method="post">
+        <form action="#" method="post">
             {{ form.hidden_tag() }}
             <p>
                 {{form.username.label }}<br> {{form.username(size=20)}}
