lessonhome update 2.08pm

--- a/pokerapp/templates/Lessons/lessonshome.html
+++ b/pokerapp/templates/Lessons/lessonshome.html
@@ -1,87 +1,12 @@
 {% extends "base.html" %}{%block content%} {% block style %} {%endblock%}
 {%block title%} Lessons {%endblock%}
-<div class="bg-success mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-  <div class="my-3 py-3">
-    <h2 class="display-5">The Suits</h2>
-    <p class="lead">Learn the difference between spades, diamonds, clubs and hearts.</p>
-    <img src= "https://gamek.mediacdn.vn/133514250583805952/2020/12/6/photo-1-16072288888212085984101.png"></img>
+<div class="card bg-success">
+  <img class="card-img-fluid" src="https://static.guides.co/a/uploads/1063%2F4suits.png" alt="Suits">
+  <div class="card-body">
+    <h5 class="card-title">Lesson 1</h5>
+    <p class="card-text">Learn the suits of the playing cards</p>
   </div>
 </div>
 
-<div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-  <div class="my-3 p-3">
-    <h2 class="display-5">Another headline</h2>
-    <p class="lead">And an even wittier subheading.</p>
-  </div>
-  <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-</div>
-</div>
 
-
-
-<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-
-<div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-  <div class="my-3 p-3">
-    <h2 class="display-5">Another headline</h2>
-    <p class="lead">And an even wittier subheading.</p>
-  </div>
-  <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-</div>
-
-<div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-  <div class="my-3 py-3">
-    <h2 class="display-5">Another headline</h2>
-    <p class="lead">And an even wittier subheading.</p>
-  </div>
-  <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-</div>
-</div>
-
-
-<footer class="container py-5">
-<div class="row">
-  <div class="col-6 col-md">
-    <p> YOooo</p>
-  </div>
-  <div class="col-6 col-md">
-    <h5>Features</h5>
-    <ul class="list-unstyled text-small">
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Cool stuff</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Random feature</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Team feature</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Stuff for developers</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Another one</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Last time</a></li>
-    </ul>
-  </div>
-  <div class="col-6 col-md">
-    <h5>Resources</h5>
-    <ul class="list-unstyled text-small">
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Resource</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Resource name</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Another resource</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Final resource</a></li>
-    </ul>
-  </div>
-  <div class="col-6 col-md">
-    <h5>Resources</h5>
-    <ul class="list-unstyled text-small">
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Business</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Education</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Government</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Gaming</a></li>
-    </ul>
-  </div>
-  <div class="col-6 col-md">
-    <h5>About</h5>
-    <ul class="list-unstyled text-small">
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Team</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Locations</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Privacy</a></li>
-      <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Terms</a></li>
-    </ul>
-  </div>
-</div>
-</footer>
 {%endblock%}
