--- a/pokerapp/static/styles/custom.css
+++ b/pokerapp/static/styles/custom.css
@@ -111,8 +111,14 @@ p {
   
   .overflow-hidden { overflow: hidden; }
 
-.card
-{
-color: red;
-
-}
+  .button {
+      border: none;
+      padding: 15px, 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      cursor: pointer;
+      background-color: white;
+  }
