--- a/pokerapp/static/styles/lessons.css
+++ b/pokerapp/static/styles/lessons.css
@@ -1,8 +1,34 @@
-content {
-    background-color: white;
+/* Style tab links */
+
+.tablink {
+    background-color: #555;
+    color: white;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    font-size: 17px;
+    width: 25%;
 }
 
-card {
-    height: auto;
-    width: 600px;
+.tablink:hover {
+    background-color: #777;
+}
+
+
+/* Style the tab content (and add height:100% for full page content) */
+
+.tabcontent {
+    color: white;
+    display: none;
+    padding: 100px 20px;
+    height: 60%;
+}
+
+#content {
+    background-color: red;
+}
+
+#quiz {
+    background-color: green;
 }
