--- a/pokerapp/templates/Lessons/lesson1.html
+++ b/pokerapp/templates/Lessons/lesson1.html
@@ -1,69 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Intuitive Poker</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="../css/custom.css">
-    </head>
-<title>
-    Intuitive Poker
-</title>
-<body>
+{% extends "base.html" %}{% block style %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/lessons.css') }}"> {% endblock %}{% block title %}Lesson 1{% endblock %}{% block content %}
+
+<button class="tablink" onclick="openPage('content', this, 'red')">Content</button>
+<button class="tablink" onclick="openPage('quiz', this, 'green')" id="defaultOpen">Quiz</button>
+
+<div id="content" class="tabcontent">
+    <h3>Content</h3>
+    <p>
+        Welcome to our first poker lesson. This is the introduction to a wealth of knowledge about the most exciting card game ever devised – poker. Either you already know it or will learn it as you go through these lessons offered up by Pokerology.com. The
+        “it” I refer to is that poker is an incredibly enjoyable, challenging and addictive game. Once the poker bug has bitten you there is seldom a cure. If that is true, and based upon the number of years I have played and enjoyed the game, I believe
+        it to be, then it is worth your time and effort to play the game well. You will soon learn that there are many different variations of poker, but the one thing they have in common is that you have to use your best five cards to make your hand.
+        All forms of poker use a fifty two card deck made up of ranks starting with a two, commonly called a deuce, and continuing by number through ten and then in order comes the Jack, Queen, King and Ace. There are four different suits; Spades;
+    </p>
 </div>
+<div id="quiz" class="tabcontent">
+    <h3>Quiz</h3>
+    <p>lol</p>
+</div>
+{% endblock %}{% block script %}
 
-<nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
-    <a class="navbar-brand" href="../splash.html">
-        <img src="../pic.jpg" width="30" height="30" alt="logo"> Intuitive Poker
-    </a>
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="../splash.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../login.html">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../assess.html" tabindex="-1" >Assessments</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../feedback.html" tabindex="-1" >Feedback</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../stats.html" tabindex="-1" >Stats</a>                  
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Lessons
-                    </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="lessonshome.html">Lesson Home</a>
-                    <a class="dropdown-item" href="lesson1.html">Lesson 1</a>
-                    <a class="dropdown-item" href="lesson2.html">Lesson 2</a>
-                      </ul>
-                    </ul>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    <div
-    
-
-    
-   
-
-<!-- Scripts at the bottom allow for faster page loading, put any body stuff above these scripts-->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-</body>
-
-</html>
+<script src="{{url_for('static', filename='js/lesson1.js') }}"></script> {%endblock%}
