--- a/pokerapp/templates/pokerlanding.html
+++ b/pokerapp/templates/pokerlanding.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<!-- saved from url=(0051)https://getbootstrap.com/docs/4.0/examples/product/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+
     <style> 
       .background-image{
 
-      background-image: url(https://image.freepik.com/free-photo/close-up-casino-chips-stack-green-poker-table_23-2147937911.jpg);
+      background-image: url("homephoto.PNG");
+      /* https://image.freepik.com/free-photo/close-up-casino-chips-stack-green-poker-table_23-2147937911.jpg   */
       background-repeat: no-repeat; 
-      background-position: 100% 9%;
-    
+      background-position: 100% 100%;
+      }
+
+      .responsive {
+      width: 100%;
+      height: auto;
+      }
       
-    }</style>
+    </style>
 
     <title>Product example for Bootstrap</title>
 
@@ -24,6 +30,9 @@
 
     <!-- Custom CSS for this template -->
     <link href="pokerlanding.css" rel="stylesheet">
+
+
+
   </head>
 
   <body style= "background-color: black">
@@ -67,11 +76,11 @@
 
 
     <div class="position-relative overflow-hidden p-3 text-center ">
-      <div class="background-image">
+      <div class="background-image responsive">
       <div class="col-md-5 p-lg-5 mx-auto">
         <h1 class="display-4 font-weight-normal header-main" >Learn Poker</h1>
         <p class="lead font-weight-normal subtitle-text">Poker done simply. Learn the starting hands and basics of poker in under 10 minutes, click below to begin.</p>
-        <a class="btn btn-outline-secondary" href="www.google.com">Take Lesson One</a>
+        <a class="btn btn-outline-secondary" href="www.TODO.com">Take Lesson One</a>
       </div>
       </div>
     </div>
@@ -81,20 +90,21 @@
     
     <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
       
-      <div class="bg-success mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+      <div style="background-color: rgb(51, 153, 56);" class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+        
         <div class="my-3 py-3">
           <h2 class="display-5">The Suits</h2>
-          <p class="lead">Learn the difference between spades, diamonds, clubs and hearts.</p>
-          <img src= "https://gamek.mediacdn.vn/133514250583805952/2020/12/6/photo-1-16072288888212085984101.png"></img>
+          <p class="lead">Learn the difference between spades, diamonds, clubs and hearts. <br><br></p>
+          <img src= "https://www.pngpix.com/wp-content/uploads/2016/11/PNGPIX-COM-Playing-Card-Symbols-PNG-Transparent-Image.png" alt="4 suits" onclick = "TODO" class="responsive"></img>
         </div>
       </div>
 
       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
         <div class="my-3 p-3">
-          <h2 class="display-5">Another headline</h2>
-          <p class="lead">And an even wittier subheading.</p>
+          <h2 class="display-5">Challenge Yourself</h2>
+          <p class="lead">See where you rank against other players with our results page.</p>
+          <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Standard_deviation_diagram.svg/1280px-Standard_deviation_diagram.svg.png" alt = "distibution graph" onclick = "TODO" class = "responsive"></img>
         </div>
-        <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
       </div>
     </div>
 
@@ -102,15 +112,15 @@
     
     <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
       
-      <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+      <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
         <div class="my-3 p-3">
-          <h2 class="display-5">Another headline</h2>
-          <p class="lead">And an even wittier subheading.</p>
+          <h2 class="display-5">The Game</h2>
+          <p class="lead">Learn how the game of Texas no limit holdem is played</p>
+        <img src = "https://1ednx3tnfmz1xmk99kw15ns1-wpengine.netdna-ssl.com/wp-content/uploads/2019/05/flop-turn-river.png" alt = "poker, flop turn and river" onclick = "TODO" class = "responsive"></img>
         </div>
-        <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-      </div>
+        </div>
       
-      <div class="bg-primary mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
+      <div  style="background-color: rgb(47, 44, 221);" class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
         <div class="my-3 py-3">
           <h2 class="display-5">Another headline</h2>
           <p class="lead">And an even wittier subheading.</p>
@@ -120,50 +130,46 @@
     </div>
 
 
-    <footer class="container py-5">
-      <div class="row">
-        <div class="col-6 col-md">
-          <p> YOooo</p>
-        </div>
-        <div class="col-6 col-md">
-          <h5>Features</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Cool stuff</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Random feature</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Team feature</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Stuff for developers</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Another one</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Last time</a></li>
+
+
+    
+
+    
+    <footer class="page-footer font-small pt-4">
+
+      <div class="container-fluid text-center text-md-left">
+    
+        <div class="row">
+   
+          <div style = "color:rgb(161, 153, 153);" class="col-md-6 mt-md-0 mt-3">
+            <h5 class="text-uppercase">Agile Web Development 2021</h5>
+            <p class="text-muted">2021 project for students Kane Alexander, Jordan Lee and Jake Lyell.</p>
+          </div>
+    
+          <hr class="clearfix w-100 d-md-none pb-3">
+    
+          <div style = "color:rgb(161, 153, 153);"   class="col-6 col-md">
+            <h5>Features</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="TODO">Login</a></li>
+              <li><a class="text-muted" href="TODO">Home</a></li>
+              <li><a class="text-muted" href="TODO">Lessons</a></li>
+            </ul>
+          </div>
+    
+
+          <div style = "color:rgb(161, 153, 153);" class="col-6 col-md">
+            <h5>Contact Us</h5>
+            <ul class="list-unstyled text-small">
+            <li><a class="text-muted" href="mailto: 22710428@student.uwa.edu.au">Kane Alexander</a></li>
+            <li><a class="text-muted" href="mailto: 22705507@student.uwa.edu.au">Jordan Lee</a></li>
+            <li><a class="text-muted" href="mailto: 22704832@student.uwa.edu.au">Jake Lyell</a></li>
           </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>Resources</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Resource</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Resource name</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Another resource</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Final resource</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>Resources</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Business</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Education</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Government</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Gaming</a></li>
-          </ul>
-        </div>
-        <div class="col-6 col-md">
-          <h5>About</h5>
-          <ul class="list-unstyled text-small">
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Team</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Locations</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Privacy</a></li>
-            <li><a class="text-muted" href="https://getbootstrap.com/docs/4.0/examples/product/#">Terms</a></li>
-          </ul>
-        </div>
+
+          </div>
+        </div> 
       </div>
     </footer>
+
 
 </body></html>
