small css update

--- a/pokerapp/templates/Lessons/lessonshome.html
+++ b/pokerapp/templates/Lessons/lessonshome.html
@@ -5,7 +5,7 @@
   <div style = "background-color: rgb(51,153,56);" class="my-3 py-3">
     <h2 class="display-5">The Suits</h2>
     <p class="lead">Learn the difference between spades, diamonds, clubs and hearts.</p>
-    <img src= "https://gamek.mediacdn.vn/133514250583805952/2020/12/6/photo-1-16072288888212085984101.png"></img>
+    <img src= "https://gamek.mediacdn.vn/133514250583805952/2020/12/6/photo-1-16072288888212085984101.png" class = "img-fluid"></img>
     <button type="button"><a href = "{{ url_for('lesson1')}}">Begin Lesson</a></button>
   </div>
 </div>
@@ -15,16 +15,16 @@
   <div style = "background-color: rgb(167, 4, 4);"class="my-3 py-3">
     <h2 class="display-5">The Poker Hands</h2>
     <p class="lead">Learn the different possible hands and their ranking.</p>
-    <img src= "https://www.deepstackpoker.com.au/images/poker-hand-royal-flush-big.png"></img>
+    <img src= "https://www.deepstackpoker.com.au/images/poker-hand-royal-flush-big.png" class = "img-fluid" ></img>
     <button type="button"><a href = "{{ url_for('lesson2')}}">Begin Lesson</a></button>
   </div>
 </div>
 
 <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-  <div style = "background-color: rgb(24, 97, 192);" class="my-3 py-3">
+  <div style = "background-color: rgb(24, 97, 192);" class="my-3 py-3"> 
     <h2 class="display-5">Lesson 3</h2>
-    <p class="lead">Learn the different possible hands and their ranking.</p>
-    <img src= "https://www.deepstackpoker.com.au/images/poker-hand-royal-flush-big.png"></img>
+    <p class="lead">Learn how a round of poker works.</p>
+    <img src= "https://pnimg.net/w/articles/4/5c1/7407565531.jpg" class = "img-fluid"></img>
     <button type="button"><a href = "{{ url_for('lesson3')}}">Begin Lesson</a></button>
   </div>
 </div>
