--- a/pokerapp/static/styles/custom.css
+++ b/pokerapp/static/styles/custom.css
@@ -113,12 +113,17 @@ p {
 
   .button {
       border: none;
+      background-color: #555555;
       padding: 15px, 32px;
       text-align: center;
       text-decoration: none;
       display: inline-block;
       font-size: 16px;
       margin: 4px 2px;
-      cursor: pointer;
-      background-color: white;
-  }
+      cursor: pointer; 
+     }
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
