--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -48,6 +48,42 @@
 
     {% block content %} {% endblock %}
 
+    <footer class="page-footer font-small pt-4">
+
+        <div class="container-fluid text-center text-md-left">
+      
+          <div class="row">
+     
+            <div style = "color:rgb(161, 153, 153);" class="col-md-6 mt-md-0 mt-3">
+              <h5 class="text-uppercase">Agile Web Development 2021</h5>
+              <p class="text-muted">2021 project for students Kane Alexander, Jordan Lee and Jake Lyell.</p>
+            </div>
+      
+            <hr class="clearfix w-100 d-md-none pb-3">
+      
+            <div style = "color:rgb(161, 153, 153);"   class="col-6 col-md">
+              <h5>Features</h5>
+              <ul class="list-unstyled text-small">
+                <li><a class="text-muted" href="TODO">Login</a></li>
+                <li><a class="text-muted" href="TODO">Home</a></li>
+                <li><a class="text-muted" href="TODO">Lessons</a></li>
+              </ul>
+            </div>
+      
+  
+            <div style = "color:rgb(161, 153, 153);" class="col-6 col-md">
+              <h5>Contact Us</h5>
+              <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="mailto: 22710428@student.uwa.edu.au">Kane Alexander</a></li>
+              <li><a class="text-muted" href="mailto: 22705507@student.uwa.edu.au">Jordan Lee</a></li>
+              <li><a class="text-muted" href="mailto: 22704832@student.uwa.edu.au">Jake Lyell</a></li>
+            </ul>
+  
+            </div>
+          </div> 
+        </div>
+      </footer>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
