--- a/pokerapp/templates/pokerlanding.html
+++ b/pokerapp/templates/pokerlanding.html
@@ -1,4 +1,16 @@
 {% extends "base.html"%} {%block title%}Home{%endblock%} {% block content %}
+
+<style> 
+
+.background-image{
+
+  background-image: url("../static/homephoto.png");
+  /* https://image.freepik.com/free-photo/close-up-casino-chips-stack-green-poker-table_23-2147937911.jpg   */
+  background-repeat: no-repeat; 
+  background-position: 100% 100%;
+  }
+  </style>
+
     <div class="position-relative overflow-hidden p-3 text-center ">
       <div class="background-image responsive">
       <div class="col-md-5 p-lg-5 mx-auto">
