lesson blocked, removed unnecessary htmls

--- a/pokerapp/static/styles/custom.css
+++ b/pokerapp/static/styles/custom.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    background-color: #1b1d1f;
+    background-color: black;
     text-align: center;
     font-family: 'Calibri';
 }
@@ -61,18 +61,10 @@ p {
     padding: 0px 10px;
 }
 
-.background-image{
-
-    background-image: url("../homephoto.PNG");
-    /* https://image.freepik.com/free-photo/close-up-casino-chips-stack-green-poker-table_23-2147937911.jpg   */
-    background-repeat: no-repeat; 
-    background-position: 100% 100%;
-    }
-    
 .responsive {
     width: 100%;
     height: auto;
-    }
+}
 
 @media screen and (max-height: 450px) {
     .sidenav {
@@ -82,59 +74,73 @@ p {
         font-size: 18px;
     }
 }
+
+
 /**kanes**/
+
 .container {
     max-width: 960px;
-  }
-  
-  /*
+}
+
+
+/*
    * Dummy devices (replace them with your own or something else entirely!)
    */
-  
-  /*
+
+
+/*
    * Extra utilities
    */
-  
-  .border-top { border-top: 1px solid #e5e5e5; }
-  .border-bottom { border-bottom: 1px solid #e5e5e5; }
-  .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
-  
-  .header-main{
+
+.border-top {
+    border-top: 1px solid #e5e5e5;
+}
+
+.border-bottom {
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.box-shadow {
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+.header-main {
     color: white;
-  }
-  
-  .subtitle-text{
+}
+
+.subtitle-text {
     color: white;
-  }
-  
-  
-  
-  .flex-equal > * {
+}
+
+.flex-equal>* {
     -ms-flex: 1;
     -webkit-box-flex: 1;
     flex: 1;
-  }
-  @media (min-width: 768px) {
-    .flex-md-equal > * {
-      -ms-flex: 1;
-      -webkit-box-flex: 1;
-      flex: 1;
-    }
-  }
-  
-  .overflow-hidden { overflow: hidden; }
+}
 
-  .button {
-      border: none;
-      background-color: #555555;
-      padding: 15px, 32px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      margin: 4px 2px;
-      cursor: pointer; 
-     }
+@media (min-width: 768px) {
+    .flex-md-equal>* {
+        -ms-flex: 1;
+        -webkit-box-flex: 1;
+        flex: 1;
+    }
+}
+
+.overflow-hidden {
+    overflow: hidden;
+}
+
+.button {
+    border: none;
+    background-color: #555555;
+    padding: 15px, 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
 
 img {
     max-width: 100%;
