--- a/pokerapp/static/styles/lessons.css
+++ b/pokerapp/static/styles/lessons.css
@@ -6,6 +6,7 @@
     border: none;
     outline: none;
     cursor: pointer;
+    margin-top: 30px;
     padding: 14px 16px;
     font-size: 17px;
     width: 25%;
