--- a/pokerapp/templates/pokerlanding.html
+++ b/pokerapp/templates/pokerlanding.html
@@ -9,7 +9,7 @@
   background-repeat: no-repeat; 
   background-position: 100% 100%;
   }
-  </style>
+</style>  
 
     <div class="position-relative overflow-hidden p-3 text-center ">
       <div class="background-image responsive">
@@ -35,7 +35,7 @@
       <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
         <div class="my-3 p-3">
           <h2 class="display-5">Challenge Yourself</h2>
-          <p class="lead">See where you rank against other players with our results page.</p>
+          <p style = "color: black" class="lead">See where you rank against other players with our results page.</p>
           <img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/8/8c/Standard_deviation_diagram.svg/1280px-Standard_deviation_diagram.svg.png" alt = "distibution graph" onclick = "TODO" class = "responsive"></img>
         </div>
       </div>
