--- a/pokerapp/static/styles/custom.css
+++ b/pokerapp/static/styles/custom.css
@@ -2,7 +2,7 @@
     contains the sidenav bar css too */
 
 * {
-    border-radius: 8px;
+    border-radius: 3px;
 }
 
 .btn {
@@ -10,9 +10,13 @@
 }
 
 body {
-    background-color: #1b1d1f;
+    background-color: black;
     text-align: center;
     font-family: 'Calibri';
+}
+
+.footer{
+    color:rgb(201, 187, 187)
 }
 
 h1 {
@@ -61,13 +65,6 @@ p {
     padding: 0px 10px;
 }
 
-.background-image{
-
-    background-image: url("../homephoto.PNG");
-    /* https://image.freepik.com/free-photo/close-up-casino-chips-stack-green-poker-table_23-2147937911.jpg   */
-    background-repeat: no-repeat; 
-    background-position: 100% 100%;
-    }
     
 .responsive {
     width: 100%;
