Change from lesson 1 to home

--- a/pokerapp/templates/pokerlanding.html
+++ b/pokerapp/templates/pokerlanding.html
@@ -4,7 +4,7 @@
       <div class="col-md-5 p-lg-5 mx-auto">
         <h1 class="display-4 font-weight-normal header-main" >Learn Texas Hold ' Em Poker</h1>
         <p class="lead font-weight-normal subtitle-text">Poker done simply. Learn the starting hands and basics of poker in under 10 minutes, click below to begin.</p>
-        <a class="btn btn-outline-secondary" href="{{ url_for('lesson1')}}">Take Lesson One</a>
+        <a class="btn btn-outline-secondary" href="{{ url_for('lessons')}}">Begin Learning</a>
       </div>
       </div>
     </div>
