--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -85,8 +85,8 @@
           
         </div>
       </div>
-      <div class="text-muted text-center">
-       <span><a href="https://teaching.csse.uwa.edu.au/units/CITS3403/">2021 Agile Web Development Project</a></span>
+      <div >
+       <a class="text-muted text-center" href="https://teaching.csse.uwa.edu.au/units/CITS3403/">2021 Agile Web Development Project</a>
       </div>
     </footer>
     
