--- a/pokerapp/templates/pokerlanding.html
+++ b/pokerapp/templates/pokerlanding.html
@@ -9,14 +9,14 @@
   background-repeat: no-repeat; 
   background-position: 100% 100%;
   }
-</style>  
+  </style>
 
     <div class="position-relative overflow-hidden p-3 text-center ">
       <div class="background-image responsive">
       <div class="col-md-5 p-lg-5 mx-auto">
         <h1 class="display-4 font-weight-normal header-main" >Learn Poker</h1>
         <p class="lead font-weight-normal subtitle-text">Poker done simply. Learn the starting hands and basics of poker in under 10 minutes, click below to begin.</p>
-        <a class="btn btn-outline-secondary" href="www.TODO.com">Take Lesson One</a>
+        <a class="btn btn-outline-secondary" href="{{ url_for('lesson1')}}">Take Lesson One</a>
       </div>
       </div>
     </div>
@@ -24,11 +24,10 @@
     <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
       
       <div style="background-color: rgb(51, 153, 56);" class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-        
         <div class="my-3 py-3">
-          <h2 class="display-5">The Suits</h2>
-          <p class="lead">Learn the difference between spades, diamonds, clubs and hearts. <br><br></p>
-          <img src= "https://www.pngpix.com/wp-content/uploads/2016/11/PNGPIX-COM-Playing-Card-Symbols-PNG-Transparent-Image.png" alt="4 suits" onclick = "TODO" class="responsive"></img>
+          <h2 class="display-5">Fast and Effective</h2>
+          <p class="lead">Learn the core poker mechanics in less than 10 minutes with interactive assessments and quizzes! <br><br></p>
+          <img src= "https://texasholdemquestions.com/wp-content/uploads/2019/03/cropped-thumbnail_thm-website-logo-7-1.png" alt="4 suits" onclick = "TODO" class="responsive"></img>
         </div>
       </div>
 
