lesson updates #itscontenttime

--- a/pokerapp/templates/Lessons/lesson1.html
+++ b/pokerapp/templates/Lessons/lesson1.html
@@ -7,11 +7,17 @@
 <div id="content" class="tabcontent">
     <h3>Content</h3>
     <p>
-        Welcome to our first poker lesson. This is the introduction to a wealth of knowledge about the most exciting card game ever devised – poker. Either you already know it or will learn it as you go through these lessons offered up by Pokerology.com. The
-        “it” I refer to is that poker is an incredibly enjoyable, challenging and addictive game. Once the poker bug has bitten you there is seldom a cure. If that is true, and based upon the number of years I have played and enjoyed the game, I believe
-        it to be, then it is worth your time and effort to play the game well. You will soon learn that there are many different variations of poker, but the one thing they have in common is that you have to use your best five cards to make your hand.
-        All forms of poker use a fifty two card deck made up of ranks starting with a two, commonly called a deuce, and continuing by number through ten and then in order comes the Jack, Queen, King and Ace. There are four different suits; Spades;
+        Welcome to our first poker lesson. A deck of playing cards consists of four groups called suits.
+        These suits are spades and clubs which are commonly coloured black. As well as hearts and diamonds, commonly red.
     </p>
+    <img src = "https://www.pngpix.com/wp-content/uploads/2016/11/PNGPIX-COM-Playing-Card-Symbols-PNG-Transparent-Image.png "class = "responsive"> <!--add picture of four suits-->
+    <p>
+        Each suit has thirteen cards. The cards have a numerical order. There are the "face" cards of ace, jack, queen and king. The ace acts as the number one.
+        As well as the highest value in the suit. The jack acts as the eleventh card, the queen twelth and king thirteenth.
+        A suit also has the cards two, three, four, five, six, seven, eight, nine and ten. If you had the tenth card in the suit of clubs.
+        It could be referred to as a "ten of clubs."
+    </p>
+    <img src = "https://www.wsop.com/how-to-play-poker/images/how-to-card-rank.jpg" class = "responsive"> <!-- add picture of 13 cards-->
 </div>
 <div id="quiz" class="tabcontent">
     <h3>lesson1/h3>
