--- a/pokerapp/templates/Lessons/lesson3.html
+++ b/pokerapp/templates/Lessons/lesson3.html
@@ -7,11 +7,27 @@
 <div id="content" class="tabcontent">
     <h3>Content</h3>
     <p>
-        Welcome to our first poker lesson. This is the introduction to a wealth of knowledge about the most exciting card game ever devised – poker. Either you already know it or will learn it as you go through these lessons offered up by Pokerology.com. The
-        “it” I refer to is that poker is an incredibly enjoyable, challenging and addictive game. Once the poker bug has bitten you there is seldom a cure. If that is true, and based upon the number of years I have played and enjoyed the game, I believe
-        it to be, then it is worth your time and effort to play the game well. You will soon learn that there are many different variations of poker, but the one thing they have in common is that you have to use your best five cards to make your hand.
-        All forms of poker use a fifty two card deck made up of ranks starting with a two, commonly called a deuce, and continuing by number through ten and then in order comes the Jack, Queen, King and Ace. There are four different suits; Spades;
+       Poker is a turn based game. There are stages of play that come in an order. That is:
+       the pre-flop, flop, post-flop, turn, post turn, the river then the final round of betting.
+       In all these stages of play there is either action of betting, or cards being laid onto the table.
+       Here is what post-flop looks like for example:
     </p>
+    <img src = "..."> <!-- image of postflop or some other round-->
+    <p>
+        Players make actions during these betting phases. Players can fold, bet, raise or check.
+        A fold means the player forfeits the round, places their cards out of their hand and sits out.
+        A bet means the player is placing a bet into the community pot of chips.
+        A raise means the player is increasing the minimum bet size with their own bet.
+        A check is when the player does not bet further as they have already put in an amount that satisfies the current bet.
+    </p>
+    <img src ="..."><!-- relevant image-->
+    <p>
+        Cards come down onto the table in three stages; the flop, the turn and the river. 
+        On the flop, three cards come down, face up after one has been discarded from the deck.
+        On the turn, a fourth card is placed on the table after one has been discarded. 
+        The last card called the river is placed on the table on the penultimate stage of play.
+    </p>
+    <img src = "..."><!--relevant image-->
 </div>
 <div id="quiz" class="tabcontent">
     <h3>Quiz</h3>
