--- a/pokerapp/templates/Lessons/lessonshome.html
+++ b/pokerapp/templates/Lessons/lessonshome.html
@@ -14,7 +14,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://img.lovepik.com/original_origin_pic/18/11/17/ddc55b617788ddbf4b3cbef886678987.png_wh300.png" class="card-img-top" alt="...">
+    <img src="https://www.deepstackpoker.com.au/images/poker-hand-straight-flush-big.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">The Hands</h5>
       <p class="card-text">In this lesson you will learn the hands and their ranking.</p>
@@ -26,7 +26,7 @@
     <div class="card-body">
       <h5 class="card-title">The Game</h5>
       <p class="card-text">In this lesson you will learn how texas hold 'em no limit is played</p>
-      <button type="button"class="btn btn-dark"><a href = "{{ url_for('lesson2')}}">Begin Lesson</a></button>
+      <button type="button"class="btn btn-dark"><a href = "{{ url_for('lesson3')}}">Begin Lesson</a></button>
     </div>
   </div>
 </div>
