--- a/pokerapp/templates/Lessons/lesson3.html
+++ b/pokerapp/templates/Lessons/lesson3.html
@@ -27,7 +27,7 @@
         On the turn, a fourth card is placed on the table after one has been discarded. 
         The last card called the river is placed on the table on the penultimate stage of play.
     </p>
-    <img src = "..."><!--relevant image-->
+    <img src = "https://1ednx3tnfmz1xmk99kw15ns1-wpengine.netdna-ssl.com/wp-content/uploads/2019/05/flop-turn-river.png">
 </div>
 <div id="quiz" class="tabcontent">
     <h3>Quiz</h3>
