--- a/pokerapp/templates/Lessons/lessonshome.html
+++ b/pokerapp/templates/Lessons/lessonshome.html
@@ -4,6 +4,7 @@
 
 
 <body>
+<!--Card deck with buttons-->
 <div class="card-deck"> <!--That's meta web design...-->
   <div class="card">
     <img src="https://www.pngpix.com/wp-content/uploads/2016/11/PNGPIX-COM-Playing-Card-Symbols-PNG-Transparent-Image.png" class="card-img-top" alt="...">
