--- a/pokerapp/templates/base.html
+++ b/pokerapp/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> <!--Title with icons-->
     <title>{% block title %}{% endblock %} - Poker Basics</title>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="https://toppng.com/uploads/preview/casino-cards-png-falling-poker-chips-11562995898mdvm5phghg.png">
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/custom.css') }}"> {% block style %}{% endblock %}
 </head>
 
-<body>  
+<body>  <!--Jordan's cool navbar-->
     <nav class="navbar navbar-dark navbar-expand-sm mt-3" style="background-color: rgb(153, 27, 27);">
         <a class="navbar-brand" href="splash.html">
             <img src='https://images.vexels.com/media/users/3/151229/isolated/preview/3fbd44975e2287324c2ee8d5f4017c67-spades-card-icon-by-vexels.png' width = '30px' height= 'auto' alt="logo"> Poker Basics 
@@ -24,7 +24,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
-                    {% if current_user.is_anonymous %}
+                    {% if current_user.is_anonymous %} <!--different if logged in or out-->
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                     </li>
@@ -32,14 +32,14 @@
                     <li>
                         <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item"> <!--Profile Page will be "giving feedback to the user"-->
                         <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a>
                     </li>
                     {% endif %}
-                    <li class="nav-item">
+                    <li class="nav-item"> <!--Link to lessons home page-->
                         <a class="nav-link" href="{{url_for('lessons')}}" tabindex="-1">Lessons</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item"> <!--link to page for aggregate data display-->
                         <a class="nav-link" href="{{ url_for('stats')}}" tabindex="-1">Stats</a>
                     </li>
                 </ul>
@@ -51,7 +51,7 @@
 
     {% block content %} {% endblock %}
 
-    <footer>
+    <footer> <!--Footer at bottom of page-->
       <div class="container">
         <div class="row">
           
@@ -90,6 +90,7 @@
       </div>
     </footer>
     
+    <!--Optimisation scripts-->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
