--- a/pokerapp/templates/login.html
+++ b/pokerapp/templates/login.html
@@ -1,3 +1,4 @@
+<!--Login Page-->
 {% extends "base.html" %} {% block style %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/login.css') }}"> {% endblock %} {% block title %}Login{% endblock %} {% block content %}
 <div class="container">
@@ -5,17 +6,17 @@
     <h2>Sign In</h2>
     <form action="#" method="post" novalidate>
         {{ form.hidden_tag() }}
-        <p>
+        <p> <!--Username-->
             {{ form.username.label }}<br> {{ form.username(size=20) }}<br> {% for error in form.username.errors %}
             <span style="color: red;">[{{ error }}]</span> {% endfor %}
         </p>
-        <p>
+        <p><!--Password entry-->
             {{ form.password.label }}<br> {{ form.password(size=20) }}<br> {% for error in form.password.errors %}
             <span style="color: red;">[{{ error }}]</span> {% endfor %}
-        </p>
+        </p><!--Remember me checkbox-->
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
-</div>
+</div> <!--Users need to register for lesson access-->
 <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
 {% endblock %}
